--- a/Project/server/package.json
+++ b/Project/server/package.json
@@ -19,10 +19,14 @@
   "dependencies": {
     "concurrently": "^5.0.1",
     "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.0",
     "nodemon": "^2.0.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^0.20.0"
   }
 }
